fixed z-index for lifestyle section after

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11494,7 +11494,7 @@ a:hover {
   border-radius: 50%;
   left: 30%;
   top: 70px;
-  z-index: -1;
+  z-index: -2;
 }
 @media (max-width: 767.98px) {
   .lifestyle::after {
