--- a/scss/pages/home/_lifestyle.scss
+++ b/scss/pages/home/_lifestyle.scss
@@ -21,7 +21,7 @@
     border-radius: 50%;
     left: 30%;
     top: 70px;
-    z-index: -1;
+    z-index: -2;
 
     @include media-breakpoint-down(md) {
       display: none;
